syntax = "proto3";

option java_package = "com.bluebiktech.apiservice";
option java_multiple_files = true;

message userDTO{
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    int32 age = 4;
    string phone = 5;
    string userName = 6;
};


message UserCreateRequest{
    userDTO user = 1;
};

message UserBulkCreateRequest{
    repeated userDTO user = 1;
};

message UserUpdateRequest{
    userDTO user = 1;
};

message UserBulkUpdateRequest{
    repeated userDTO user = 1;
};

message UserDeleteRequest{
    string userName = 1;
};


message UserBulkDeleteRequest{
    repeated string userName = 1;
};

message UserCreateResponse{
    userDTO user = 1;
};

message UserBulkCreateResponse{
    repeated userDTO user = 1;
};

message UserUpdateResponse{
    userDTO user = 1;
};

message UserBulkUpdateResponse{
    repeated userDTO user = 1;
};

message UserDeleteResponse{
    string responseMessage = 1;
};

message UserBulkDeleteResponse{
    repeated string responseMessage = 1;
};

message UserGetRequest{
    string userName = 1;
};


message UserGetResponse{
    userDTO user = 1;
};

message UserGetAllRequest{
};

message UserGetAllResponse{
    repeated userDTO users = 1;
};

message UserSearchRequest{
    string searchQuery = 1;
};

message UserSearchResponse{
    repeated userDTO users = 1;
};

service ApiService
{
    rpc getAllUsers(UserGetAllRequest) returns (UserGetAllResponse);
    rpc getUser(UserGetRequest) returns (UserGetResponse);
    rpc createUser(UserCreateRequest) returns (UserCreateResponse);
    rpc bulkCreateUsers(UserBulkCreateRequest) returns (UserBulkCreateResponse);
    rpc updateUser(UserUpdateRequest) returns (UserUpdateResponse);
    rpc bulkUpdateUsers(UserBulkUpdateRequest) returns (UserBulkUpdateResponse);
    rpc deleteUser(UserDeleteRequest) returns (UserDeleteResponse);
    rpc bulkDeleteUsers(UserBulkDeleteRequest) returns (UserBulkDeleteResponse);
    rpc searchUsers(UserSearchRequest) returns (UserSearchResponse);
}
